@@ -1,5 +1,10 @@
 2008-01-06  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gutils.h: Cope with gcc 4.3 changed 'extern inline'
+	semantics.  (#315437, patch by Loïc Minier)
+
+2008-01-06  Matthias Clasen  <mclasen@redhat.com>
+
 	* glib/gspawn.c (fdwalk): Don't set open_max to
 	RLIM_INFINITY.  (#495589, Tommi Komulainen)
 
